fix: gap in ticker between name and price for small screen

--- a/src/scss/components/_utils.scss
+++ b/src/scss/components/_utils.scss
@@ -1,9 +1,7 @@
 .StockReturnWithName {
   &.MuiStack-root {
     align-items: center;
-    @include media-min($lg) {
-      gap: 10px;
-    }
+    gap: 10px;
     .StockReturn {
       align-items: center;
       gap: 3px;
